--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "fcbykcom",
-  "version": "0.1.1",
+  "name": "myblog",
+  "description": "云端小屋",
+  "version": "0.1.6",
   "scripts": {
-    "build": "webpack"
+    "dev": "vitepress dev src",
+    "build": "vitepress build src",
+    "serve": "vitepress serve src",
+    "preview": "vitepress preview src"
   },
   "devDependencies": {
-    "webpack": "^5.78.0",
-    "webpack-cli": "^5.0.1",
-    "html-webpack-plugin": "^5.5.0",
-    "css-loader": "^6.7.3",
-    "less-loader": "^11.1.0",
-    "mini-css-extract-plugin": "^2.7.5",
-    "css-minimizer-webpack-plugin": "^5.0.0"
+    "vitepress": "^1.0.0-alpha.65"
+  },
+  "dependencies": {
+    "@mdit-vue/shared": "^0.12.0",
+    "axios": "^1.3.5",
+    "sass": "^1.61.0"
   }
 }
